--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-numpy
-torch
-rdkit
-scikit-learn
-mol2vec
-gensim
-networkx
-karateclub
-tqdm
-transformers
-requests
-pandas
-macaw
-seaborn
-matplotlib
-faiss-cpu
+numpy==1.22.4
+pandas==1.3.5
+torch==1.11.0
+scikit-learn==1.5.2
+rdkit==2022.09.4
+mol2vec==0.1
+gensim==4.3.2
+networkx==2.6.3
+karateclub==1.3.3
+transformers==4.44.2
+requests==2.32.2
+macaw==0.2.dev0
+seaborn==0.13.2
+matplotlib==3.8.4
+faiss-cpu==1.8.0
+tqdm==4.66.4
