--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ numpy==1.22.4
 pandas==1.3.5
 torch==1.11.0
 scikit-learn==1.5.2
+scipy==1.13.1
 rdkit==2022.09.4
 mol2vec==0.1
 gensim==4.3.2
@@ -14,3 +15,5 @@ seaborn==0.13.2
 matplotlib==3.8.4
 faiss-cpu==1.8.0
 tqdm==4.66.4
+selfies==2.1.1
+umap-learn>=0.5.6
